@@ -489,6 +489,7 @@ ext/richtext/XS/RichTextBuffer.xsp
 ext/richtext/XS/RichTextCtrl.xsp
 ext/richtext/XS/RichTextFileHandler.xsp
 ext/richtext/XS/RichTextFormattingDialog.xsp
+ext/richtext/XS/RichTextPrinting.xsp
 ext/richtext/XS/RichTextStyle.xsp
 ext/richtext/XS/RichTextStyleCtrl.xsp
 ext/richtext/XS/RichTextStyleOrganiserDialog.xsp
